--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "author": "YongYuH <larry830326@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
     "browser-sync": "2.27.4",
+    "randomcolor": "0.6.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-minimal-pie-chart": "8.2.0"
   },
   "devDependencies": {
     "@types/browser-sync": "2.26.2",
     "@types/node": "16.3.3",
+    "@types/randomcolor": "0.5.6",
     "@types/react": "17.0.14",
     "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "4.28.3",
