fix: add draft section to handle votes of multile answers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "browser-sync": "2.27.4",
+    "rambda": "6.9.0",
     "randomcolor": "0.6.2",
     "react": "17.0.2",
     "react-confirm-alert": "2.7.0",
