feat: add desktop title and date section in detail page
other changes:
- feat: add getPoll util function

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "browser-sync": "2.27.4",
+    "date-fns": "2.23.0",
     "rambda": "6.9.0",
     "randomcolor": "0.6.2",
     "react": "17.0.2",
@@ -38,6 +39,7 @@
     "fastify-static": "4.2.2",
     "husky": "7.0.1",
     "jest": "27.0.6",
+    "jest-extended": "0.11.5",
     "lint-staged": "11.0.1",
     "prettier": "2.3.2",
     "ts-jest": "27.0.5",
