--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-confirm-alert": "2.7.0",
     "react-dom": "17.0.2",
+    "react-icons": "4.2.0",
     "react-minimal-pie-chart": "8.2.0",
     "react-radio-group": "3.0.3",
     "styled-system": "5.1.5"
